! Fixed layout issue when viewing the maximum number of topics on the homepage. (Home.template.php)
! Fixed layout issue when posting a thought reply through a mobile skin. (Home.template.php)

! Fixed button lists in media albums. (media.css)

--- a/Themes/default/skins/media.css
+++ b/Themes/default/skins/media.css
@@ -75,14 +75,11 @@ table.aextbox
 	padding: 10px
 	text-align: center
 
-#albums
-	.data
-		padding: 0
-		overflow: auto
-	.buttonlist
-		padding-left: 0
-		img
-			vertical-align: middle
+#albums .buttonlist
+	li
+		margin: 0 1px 0 0
+	img
+		vertical-align: middle
 
 .item_heading, .item_headings
 	padding: 6px
